--- a/index.html
+++ b/index.html
@@ -1,2 +1,9 @@
-This my website.
-It is a cool website!
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+    This my website.
+    It is a cool website!
+  </body>
+</html>
