--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>*** My Website - Homepage ***</title>
+    <title>My Website - Homepage</title>
   </head>
   <body>
-    This my website.
-    It is a cool website!
+    <p>
+      This my website.
+      It is a cool website!
+    </p>
   </body>
 </html>
