--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   </head>
   <body>
     <p>
-      This my website.
+      This my website. <br>
       It is a cool website!
+    </p>
+    <p>
+      Great, isn't it?
     </p>
   </body>
 </html>
