--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     </p>
     <p>
       Great, isn't it?
+      But also <a href="http://www.qmul.ac.uk/">Queen Mary website</a> is nice!
     </p>
   </body>
 </html>
